--- a/public/output.css
+++ b/public/output.css
@@ -414,19 +414,6 @@ video {
   display: none;
 }
 
-select::-webkit-outer-spin-button,
-  select::-webkit-inner-spin-button,
-  select {
-  -webkit-appearance: none;
-  margin: 0;
-  cursor: pointer;
-  -moz-appearance: textfield !important;
-}
-
-select:focus:active {
-  cursor: pointer !important;
-}
-
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -592,6 +579,10 @@ select:focus:active {
   right: -56px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .z-40 {
   z-index: 40;
 }
@@ -616,12 +607,20 @@ select:focus:active {
   grid-column-start: 2;
 }
 
+.col-start-3 {
+  grid-column-start: 3;
+}
+
 .col-end-2 {
   grid-column-end: 2;
 }
 
 .col-end-3 {
   grid-column-end: 3;
+}
+
+.col-end-4 {
+  grid-column-end: 4;
 }
 
 .row-start-1 {
@@ -646,6 +645,14 @@ select:focus:active {
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .my-4 {
@@ -708,6 +715,10 @@ select:focus:active {
   margin-top: -6px;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -718,6 +729,34 @@ select:focus:active {
 
 .mt-11 {
   margin-top: 2.75rem;
+}
+
+.mt-\[-2px\] {
+  margin-top: -2px;
+}
+
+.mt-\[-8px\] {
+  margin-top: -8px;
+}
+
+.mb-\[-8px\] {
+  margin-bottom: -8px;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mr-12 {
+  margin-right: 3rem;
+}
+
+.mr-14 {
+  margin-right: 3.5rem;
 }
 
 .block {
@@ -768,6 +807,14 @@ select:focus:active {
   height: 2.25rem;
 }
 
+.h-3\/4 {
+  height: 75%;
+}
+
+.h-3\/5 {
+  height: 60%;
+}
+
 .w-\[900px\] {
   width: 900px;
 }
@@ -786,10 +833,6 @@ select:focus:active {
   width: fit-content;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -806,6 +849,46 @@ select:focus:active {
 .w-max {
   width: -webkit-max-content;
   width: max-content;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-0\.5 {
+  width: 0.125rem;
+}
+
+.w-0 {
+  width: 0px;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-\[1px\] {
+  width: 1px;
 }
 
 @-webkit-keyframes pulse {
@@ -958,8 +1041,17 @@ select:focus:active {
   border-radius: 9999px;
 }
 
+.rounded-r-sm {
+  border-top-right-radius: 0.125rem;
+  border-bottom-right-radius: 0.125rem;
+}
+
 .border-2 {
   border-width: 2px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border-b-\[1px\] {
@@ -969,6 +1061,26 @@ select:focus:active {
 .border-grey {
   --tw-border-opacity: 1;
   border-color: rgb(229 229 229 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-darkgrey {
+  --tw-border-opacity: 1;
+  border-color: rgb(64 63 76 / var(--tw-border-opacity));
+}
+
+.border-yellow {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 163 17 / var(--tw-border-opacity));
+}
+
+.border-blue {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 33 61 / var(--tw-border-opacity));
 }
 
 .bg-grey {
@@ -1003,6 +1115,21 @@ select:focus:active {
 .bg-lightgrey {
   --tw-bg-opacity: 1;
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-darkgrey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 63 76 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7233ff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(114 51 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#4c8bf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 139 245 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1118,16 +1245,6 @@ select:focus:active {
 
 .text-transparent {
   color: transparent;
-}
-
-.text-lightgrey {
-  --tw-text-opacity: 1;
-  color: rgb(242 242 242 / var(--tw-text-opacity));
-}
-
-.text-blue {
-  --tw-text-opacity: 1;
-  color: rgb(20 33 61 / var(--tw-text-opacity));
 }
 
 .backdrop-blur-md {
