Added layout component and moved header and search input to layout. Created array of page names for routing. Removed unused interface, restructured components

--- a/public/output.css
+++ b/public/output.css
@@ -579,10 +579,6 @@ video {
   grid-column: span 3 / span 3;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -599,16 +595,8 @@ video {
   grid-column-end: 3;
 }
 
-.row-start-2 {
-  grid-row-start: 2;
-}
-
 .row-start-1 {
   grid-row-start: 1;
-}
-
-.row-start-3 {
-  grid-row-start: 3;
 }
 
 .row-end-2 {
@@ -700,6 +688,10 @@ video {
 
 .mt-11 {
   margin-top: 2.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .block {
@@ -863,8 +855,12 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
