--- a/public/output.css
+++ b/public/output.css
@@ -563,12 +563,40 @@ video {
   position: relative;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.top-\[45px\] {
+  top: 45px;
+}
+
 .right-0 {
   right: 0px;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[35px\] {
+  top: 35px;
+}
+
+.top-\[38px\] {
+  top: 38px;
+}
+
+.top-\[37px\] {
+  top: 37px;
+}
+
+.top-\[36px\] {
+  top: 36px;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-20 {
@@ -579,28 +607,20 @@ video {
   grid-column: span 3 / span 3;
 }
 
-.col-start-1 {
-  grid-column-start: 1;
-}
-
 .col-start-2 {
   grid-column-start: 2;
-}
-
-.col-end-2 {
-  grid-column-end: 2;
 }
 
 .col-end-3 {
   grid-column-end: 3;
 }
 
-.row-start-1 {
-  grid-row-start: 1;
+.row-span-2 {
+  grid-row: span 2 / span 2;
 }
 
-.row-end-2 {
-  grid-row-end: 2;
+.row-start-1 {
+  grid-row-start: 1;
 }
 
 .row-end-3 {
@@ -613,6 +633,18 @@ video {
 
 .m-0 {
   margin: 0px;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-1\.5 {
+  margin: 0.375rem;
+}
+
+.m-1 {
+  margin: 0.25rem;
 }
 
 .my-4 {
@@ -628,6 +660,21 @@ video {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+
+.my-1\.5 {
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .mt-auto {
@@ -654,16 +701,20 @@ video {
   margin-top: 1rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mt-9 {
   margin-top: 2.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mr-12 {
@@ -690,8 +741,16 @@ video {
   margin-top: 2.75rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .block {
@@ -730,6 +789,17 @@ video {
   height: 60%;
 }
 
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-min {
+  height: -webkit-min-content;
+  height: min-content;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -744,6 +814,14 @@ video {
 
 .h-9 {
   height: 2.25rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-\[36px\] {
+  height: 36px;
 }
 
 .w-full {
@@ -764,16 +842,38 @@ video {
   width: fit-content;
 }
 
+.\!w-full {
+  width: 100% !important;
+}
+
+.\!w-fit {
+  width: -webkit-fit-content !important;
+  width: -moz-fit-content !important;
+  width: fit-content !important;
+}
+
+.\!w-12 {
+  width: 3rem !important;
+}
+
+.\!w-\[1px\] {
+  width: 1px !important;
+}
+
 .w-12 {
   width: 3rem;
 }
 
-.w-\[1px\] {
-  width: 1px;
-}
-
 .w-8 {
   width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[300px\] {
+  width: 300px;
 }
 
 .w-min {
@@ -781,13 +881,13 @@ video {
   width: min-content;
 }
 
-.w-\[300px\] {
-  width: 300px;
-}
-
 .w-max {
   width: -webkit-max-content;
   width: max-content;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 @-webkit-keyframes pulse {
@@ -863,6 +963,10 @@ video {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -877,6 +981,10 @@ video {
 
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -967,11 +1075,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-yellow {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 163 17 / var(--tw-bg-opacity));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
@@ -984,6 +1087,11 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-lightgrey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1005,6 +1113,10 @@ video {
           background-clip: text;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1017,9 +1129,18 @@ video {
   padding: 3.5rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-1 {
@@ -1027,9 +1148,14 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pt-16 {
@@ -1057,9 +1183,8 @@ video {
   line-height: 2rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .text-6xl {
@@ -1067,21 +1192,34 @@ video {
   line-height: 1;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .capitalize {
   text-transform: capitalize;
 }
 
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
 }
 
-.text-white {
+.text-yellow {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(252 163 17 / var(--tw-text-opacity));
 }
 
 .text-darkgrey {
@@ -1091,6 +1229,11 @@ video {
 
 .text-transparent {
   color: transparent;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-black::-webkit-input-placeholder {
