--- a/public/output.css
+++ b/public/output.css
@@ -567,6 +567,10 @@ video {
   left: 0px;
 }
 
+.top-\[35px\] {
+  top: 35px;
+}
+
 .top-\[45px\] {
   top: 45px;
 }
@@ -577,22 +581,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-\[35px\] {
-  top: 35px;
-}
-
-.top-\[38px\] {
-  top: 38px;
-}
-
-.top-\[37px\] {
-  top: 37px;
-}
-
-.top-\[36px\] {
-  top: 36px;
 }
 
 .z-10 {
@@ -607,24 +595,16 @@ video {
   grid-column: span 3 / span 3;
 }
 
-.col-start-2 {
-  grid-column-start: 2;
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
-.col-end-3 {
-  grid-column-end: 3;
+.col-span-4 {
+  grid-column: span 4 / span 4;
 }
 
-.row-span-2 {
-  grid-row: span 2 / span 2;
-}
-
-.row-start-1 {
-  grid-row-start: 1;
-}
-
-.row-end-3 {
-  grid-row-end: 3;
+.col-span-1 {
+  grid-column: span 1 / span 1;
 }
 
 .m-3 {
@@ -635,31 +615,9 @@ video {
   margin: 0px;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
-.m-1\.5 {
-  margin: 0.375rem;
-}
-
-.m-1 {
-  margin: 0.25rem;
-}
-
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .my-1\.5 {
@@ -675,6 +633,16 @@ video {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mt-auto {
@@ -745,8 +713,8 @@ video {
   margin-top: 7rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .mb-8 {
@@ -775,6 +743,14 @@ video {
 
 .h-52 {
   height: 13rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-\[36px\] {
+  height: 36px;
 }
 
 .h-\[46px\] {
@@ -812,16 +788,8 @@ video {
   height: 201px;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-\[36px\] {
-  height: 36px;
+.h-\[312px\] {
+  height: 312px;
 }
 
 .w-full {
@@ -868,26 +836,9 @@ video {
   width: 2rem;
 }
 
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-min {
-  width: -webkit-min-content;
-  width: min-content;
-}
-
 .w-max {
   width: -webkit-max-content;
   width: max-content;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 @-webkit-keyframes pulse {
@@ -947,6 +898,11 @@ video {
   grid-auto-flow: row;
 }
 
+.auto-rows-max {
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -955,16 +911,16 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
-}
-
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1017,15 +973,6 @@ video {
 
 .gap-0 {
   gap: 0px;
-}
-
-.gap-x-20 {
-  -webkit-column-gap: 5rem;
-          column-gap: 5rem;
-}
-
-.gap-y-6 {
-  row-gap: 1.5rem;
 }
 
 .self-end {
@@ -1089,11 +1036,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-lightgrey {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1113,6 +1055,14 @@ video {
           background-clip: text;
 }
 
+.object-cover {
+  object-fit: cover;
+}
+
+.object-center {
+  object-position: center;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -1123,10 +1073,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-14 {
-  padding: 3.5rem;
 }
 
 .p-4 {
@@ -1158,6 +1104,11 @@ video {
   padding-right: 0.75rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -1172,6 +1123,10 @@ video {
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pr-24 {
+  padding-right: 6rem;
 }
 
 .text-center {
@@ -1192,9 +1147,14 @@ video {
   line-height: 1;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -1207,6 +1167,10 @@ video {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .tracking-wide {
